--- a/public/index.html
+++ b/public/index.html
@@ -773,7 +773,7 @@
             <h4>20 seront portées disparus</h4>
         </div>
         <div id="titre94" class="layer">
-            <h4>19 trouverons la mort</h4>
+            <h4>19 trouveront la mort</h4>
         </div>
         <img src="images/mig0.png" id="mig0" alt="mig0" class="image" height="60%">
         <img src="images/mig1.png" id="mig1" alt="mig1" class="image" height="60%">
