--- a/public/index.html
+++ b/public/index.html
@@ -767,13 +767,13 @@
             <h3>Now, let’s go back to the family we were following. <br />This tragic journey is unfortunately only one among many.</h3>
         </div>
         <div id="titre92" class="layer">
-            <h4>Prenons 100 migrants</h4>
+            <h4>Take 100 migrants</h4>
         </div>
         <div id="titre93" class="layer">
-            <h4>20 seront portées disparus</h4>
+            <h4>20 will be missing</h4>
         </div>
         <div id="titre94" class="layer">
-            <h4>19 trouveront la mort</h4>
+            <h4>19 will be dead</h4>
         </div>
         <img src="images/mig0.png" id="mig0" alt="mig0" class="image" height="60%">
         <img src="images/mig1.png" id="mig1" alt="mig1" class="image" height="60%">
