--- a/public/index.html
+++ b/public/index.html
@@ -267,6 +267,20 @@
                 padding-right: 5%;
             }
 
+            #section12 h3 {
+                color: white;
+                padding-left: 5%;
+                padding-right: 5%;
+            }
+            #section12 ul {
+                list-style-type: disc;
+                list-style-position: inside;
+                text-align: left;
+                font-size: 20px;
+                padding-left: 15%;
+                padding-right: 5%;
+            }
+
             #infoMenu li a {
                 color: #fff;
             }
@@ -317,6 +331,7 @@
                 text-align:center;
                 padding: 5%;
             }
+
         </style>
 
     </head>
@@ -789,11 +804,12 @@
 
         <div class="section" id="section12">
             <h3>Our goal is to make people realize the extent of the phenomenon in order to act. How can you act? </h3>
-            <h4><br /> <ul style="list-style-type:disc">
+            <br>
+            <ul>
                 <li>As a citizen, you can engage in pushing for welcoming and integrating policies </li>
                 <li>As a policy maker, in taking further actions to protect and shelter migrants </li>
                 <li>Or just as a human being you can engage in helping migrants searching for asylum in your country</li>
-                </ul></h4>
+            </ul>
         </div>
 
         <div class="section" id="section13">
