--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,22 @@
         <script type="text/javascript" src="js/scrolloverflow.js"></script>
         <script type="text/javascript" src="js/jquery.fullPage.js"></script>
         <script type="text/javascript" src="js/examples.js"></script>
+        <!--[if IE]><script type="text/javascript">var console = { log: function() {} };</script><![endif]-->
+        <link rel="stylesheet" href="css/ammap.css" type="text/css">
+        <script src="js/ammap2.js" type="text/javascript"></script>
+        <script src="js/worldLow.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+        <link rel="stylesheet" type="text/css" href="css/examples.css" />
+        <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+
+        <!-- Config de FullPage -->
         <script type="text/javascript">
             $(document).ready(function() {
                 $('#fullpage').fullpage({
                     verticalCentered: true,
                     lockAnchors: false,
                     navigation: true,
-                    navigationTooltips: ['Title', 'Family Journey','Migration', '', 'Mediterranean', 'Graph', 'Centrale Route Boat',
+                    navigationTooltips: ['Title', "Family's Journey", 'Migration', 'Comparison', "Mediterranean's data", 'Graph', 'Central Route Boat',
                         'Easter Route Truck', 'Maps', 'History', 'Lampedusa', 'Datas', 'Goals', 'Thanks'],
                     showActiveTooltip: false,
 
@@ -33,13 +42,6 @@
                 });
             });
         </script>
-        <!--[if IE]><script type="text/javascript">var console = { log: function() {} };</script><![endif]-->
-        <link rel="stylesheet" href="css/ammap.css" type="text/css">
-        <script src="js/ammap2.js" type="text/javascript"></script>
-        <script src="js/worldLow.js" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
-        <link rel="stylesheet" type="text/css" href="css/examples.css" />
-        <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 
         <!-- Style de la page (CSS) -->
         <style>
@@ -260,6 +262,11 @@
                 padding-left: 5%;
                 padding-right: 5%;
             }
+            #section10 img {
+                margin-top: 5%;
+                height: 50%;
+                border: 3px solid black;
+            }
 
             #section11 h4 {
                 text-align: left;
@@ -418,8 +425,6 @@
                 </p>
 
             </div>
-
-
         </div>
 
         <div class="section" id="section3">
@@ -795,6 +800,7 @@
                 <br />Some will never know what happened to their relatives. Others will receive a call.
                 <br/>Those are the migrants you daily hear about in the news
                 <br/>For example, the Lampedusa catastrophe, during which 368 people died in 2013, motivated the Missing Migrant Project. </h4>
+            <img src="images/lampedusa_map.jpg" alt="lampedusa">
         </div>
 
         <div class="section" id="section11">
