--- a/public/index.html
+++ b/public/index.html
@@ -200,14 +200,9 @@
             #section9 .image{
                 position: absolute;
                 height: 70%;
-                width: 80%;
-                left: 10%;
+                width: 60%;
+                left: 20%;
                 top: 30%;
-
-                /*
-                * Preventing flicker on some browsers
-                * See http://stackoverflow.com/a/36671466/1081396  or issue #183
-                */
                 -webkit-transform: translate3d(0,0,0);
                 -ms-transform: translate3d(0,0,0);
                 transform: translate3d(0,0,0);
@@ -222,31 +217,11 @@
                 -ms-transform: translate3d(0,0,0);
                 transform: translate3d(0,0,0);
             }
-            #section9 #titre92 {
+            #section9 .titre9 {
                 position: absolute;
                 width: 100%;
                 left: 0;
-                top: 25%;
-
-                -webkit-transform: translate3d(0,0,0);
-                -ms-transform: translate3d(0,0,0);
-                transform: translate3d(0,0,0);
-            }
-            #section9 #titre93 {
-                position: absolute;
-                width: 100%;
-                left: 0;
-                top: 25%;
-
-                -webkit-transform: translate3d(0,0,0);
-                -ms-transform: translate3d(0,0,0);
-                transform: translate3d(0,0,0);
-            }
-            #section9 #titre94 {
-                position: absolute;
-                width: 100%;
-                left: 0;
-                top: 25%;
+                top: 30%;
 
                 -webkit-transform: translate3d(0,0,0);
                 -ms-transform: translate3d(0,0,0);
@@ -265,7 +240,7 @@
             #section10 img {
                 margin-top: 5%;
                 height: 50%;
-                border: 3px solid black;
+                border: 3px solid #ffffff;
             }
 
             #section11 h4 {
@@ -747,18 +722,18 @@
             <div id="titre91" class="layer">
                 <h3>Now, let’s go back to the family we were following. <br />This tragic journey is unfortunately only one among many.</h3>
             </div>
-            <div id="titre92" class="layer">
+            <div id="titre92" class="titre9">
                 <h4>Take 100 migrants</h4>
             </div>
-            <div id="titre93" class="layer">
+            <div id="titre93" class="titre9">
                 <h4>20 will be missing</h4>
             </div>
-            <div id="titre94" class="layer">
+            <div id="titre94" class="titre9">
                 <h4>19 will be dead</h4>
             </div>
-            <img src="images/mig0.png" id="mig0" alt="mig0" class="image" height="60%">
-            <img src="images/mig1.png" id="mig1" alt="mig1" class="image" height="60%">
-            <img src="images/mig2.png" id="mig2" alt="mig2" class="image" height="60%">
+            <img src="images/mig0.png" id="mig0" alt="mig0" class="image">
+            <img src="images/mig1.png" id="mig1" alt="mig1" class="image">
+            <img src="images/mig2.png" id="mig2" alt="mig2" class="image">
 
             <script>
                 var index2 = 0;
