--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
                     verticalCentered: true,
                     lockAnchors: false,
                     navigation: true,
-                    navigationTooltips: ['Title', "Family's Journey", 'Migration', 'Comparison', "Mediterranean's data", 'Graph', 'Central Route Boat',
-                        'Easter Route Truck', 'Maps', 'History', 'Lampedusa', 'Datas', 'Goals', 'Thanks'],
+                    navigationTooltips: ['Presentation', "Family's Journey", 'Migration', 'Comparison', "Mediterranean's data", 'The most dangerous path', 'Central Route',
+                        'Easter Route', 'Main route of migration', 'Statistics', 'Origins of the project', 'Data sources', 'Goals', 'Thanks'],
                     showActiveTooltip: false,
 
 
