README.md change

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>Migrants Project</title>
         <meta name="author" content="Arlène Botokro, Mathilda Di Matteo, Marine Hévin and Florent Votte" />
         <meta name="description" content="Data vizualisation of migration" />
-        <meta name="keywords"  content="data vizu, data vizualisation, Télécom, ParisTech, Télécom ParisTech, Migrants, migrants, migration" />
+        <meta name="keywords"  content="data vizu, data vizualisation, Télécom, ParisTech, Télécom ParisTech, Migrants, migrants, migration, SciencesPo" />
         <meta name="Resource-type" content="Document" />
         <link rel="icon" href="images/favicon.ico" />
         <script src="js/Chart.bundle.js"></script>
